@@ -1,3 +1,12 @@
+2015-11-03  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Convert/Paragraph.pm: Use the correct symbol name 
+	for the XS bootstrap function.  Print the name of the loaded 
+	library file if debug output is on, as well as the name of the 
+	bootstrap function.  Delay aliasing the loaded module to 
+	Texinfo::Convert::Paragraph, as accessing the "init" function 
+	right away seems not to work.
+
 2015-11-02  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tp/Makefile.am: Remove a commented-out line.
